--- a/AOJ_App/AOJ_App/packages.config
+++ b/AOJ_App/AOJ_App/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="6.0.1" targetFramework="net471" />
+  <package id="ModernUI.WPF" version="1.0.9" targetFramework="net471" />
 </packages>
