--- a/AOJ_App/AOJ_App/AOJ_App.csproj
+++ b/AOJ_App/AOJ_App/AOJ_App.csproj
@@ -62,7 +62,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Design\Page1.xaml">
+    <Page Include="Design\pageLogin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Design\pageSolve.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -77,9 +81,13 @@
     <Compile Include="Block.cs" />
     <Compile Include="codeeditor.cs" />
     <Compile Include="CompletionData.cs" />
-    <Compile Include="Design\Page1.xaml.cs">
-      <DependentUpon>Page1.xaml</DependentUpon>
+    <Compile Include="Design\pageLogin.xaml.cs">
+      <DependentUpon>pageLogin.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Design\pageSolve.xaml.cs">
+      <DependentUpon>pageSolve.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="global.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
