オートフィルコード変更TextAnchorの利用

--- a/AOJ_App/AOJ_App/AOJ_App.csproj
+++ b/AOJ_App/AOJ_App/AOJ_App.csproj
@@ -87,6 +87,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Editor\Block2.cs" />
     <Compile Include="Editor\Block.cs" />
     <Compile Include="Editor\codeeditor.cs" />
     <Compile Include="Compile\Compile.cs" />
