--- a/AOJ_App/AOJ_App/AOJ_App.csproj
+++ b/AOJ_App/AOJ_App/AOJ_App.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Design\pageSolve.xaml.cs">
       <DependentUpon>pageSolve.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Editor\HighLightRenderer.cs" />
     <Compile Include="global.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
