Problemの内容を更新（ソリューションエクスプローラーないに表示）

--- a/AOJ_App/AOJ_App/AOJ_App.csproj
+++ b/AOJ_App/AOJ_App/AOJ_App.csproj
@@ -159,6 +159,51 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ITP1_1_A_Problem.html" />
+    <Content Include="Problem\HTMLToText.py" />
+    <Resource Include="Problem\ITP1\ITP1_10_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_10_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_10_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_10_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_11_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_11_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_11_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_11_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_1_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_1_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_1_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_1_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_2_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_2_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_2_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_2_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_3_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_3_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_3_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_3_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_4_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_4_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_4_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_4_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_5_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_5_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_5_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_5_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_6_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_6_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_6_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_6_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_7_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_7_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_7_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_7_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_8_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_8_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_8_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_8_D.txt" />
+    <Resource Include="Problem\ITP1\ITP1_9_A.txt" />
+    <Resource Include="Problem\ITP1\ITP1_9_B.txt" />
+    <Resource Include="Problem\ITP1\ITP1_9_C.txt" />
+    <Resource Include="Problem\ITP1\ITP1_9_D.txt" />
     <Content Include="Problem\ITP1_1_A_Problem.html" />
     <Content Include="Problem\json_data1.py" />
     <Content Include="Problem\json_data2.py" />
