--- a/AOJ_App/AOJ_App/AOJ_App.csproj
+++ b/AOJ_App/AOJ_App/AOJ_App.csproj
@@ -92,6 +92,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Design\Problem_Design\ITP1_1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -108,6 +112,9 @@
     </Compile>
     <Compile Include="Design\pageProblem.xaml.cs">
       <DependentUpon>pageProblem.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Design\Problem_Design\ITP1_1.xaml.cs">
+      <DependentUpon>ITP1_1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Editor\Block2.cs" />
     <Compile Include="Editor\Block.cs" />
@@ -205,11 +212,10 @@
     <Resource Include="Problem\ITP1\ITP1_9_C.txt" />
     <Resource Include="Problem\ITP1\ITP1_9_D.txt" />
     <Content Include="Problem\ITP1_1_A_Problem.html" />
+    <Resource Include="Problem\ITP1_info.txt" />
     <Content Include="Problem\json_data1.py" />
     <Content Include="Problem\json_data2.py" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Design\Problem_Design\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
